# wisinput

./: .env.example  .gitignore  CLAUDE.md  LOCAL_MODEL_README.md  README.md  __init__.py  constraints.txt  install.bat  main.py  model_aliases.json  plot_waveform_from_recorder.py  pyproject.toml  realtime-console.tar  requirements.in  requirements.txt  test_package.py  windows_app.py  wisinput_launcher.py
audio/: recorder.py
keyboard/: __init__.py  floating_window.py  listener.py
scripts/: download_models.py
speaches/: pyproject.toml
speaches/src/speaches/: main.py  model_manager.py
speaches/src/speaches/executors/kokoro/: model_manager.py
speaches/src/speaches/executors/piper/: model_manager.py
speaches/src/speaches/executors/whisper/: model_manager.py
speaches/src/speaches/routers/: models.py  stt.py
src/: __init__.py  __main__.py  simple_launcher.py  windows_app.py
src/audio/: recorder.py
src/keyboard/: floating_window - 副本.py  floating_window.py  listener.py
src/llm/: symbol.py  symbol_old.py  translate.py
src/transcription/: google_ai.py  local_model.py
src/utils/: logger.py
src/wisinput.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
transcription/: __init__.py  google_ai.py  local_model.py
whisper_input.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
