[project]
name = "wisinput"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "dotenv>=0.9.9",
    "gradio>=5.44.1",
    "httpx-sse>=0.4.1",
    "numpy>=2.3.2",
    "openai>=1.0.0",
    "opencc>=1.1.9",
    "pycaw>=20240210",
    "pynput>=1.8.1",
    "pyperclip>=1.9.0",
    "pystray>=0.19.5",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "speaches",
    "speaches-cli",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = [
    "speaches",
    "packages/speaches-cli",
]

[tool.uv.sources]
speaches = { workspace = true }
speaches-cli = { workspace = true }

[project.urls]
homepage = "https://github.com/nurdich/wisinput"
repository = "https://github.com/nurdich/wisinput"
documentation = "https://wisinput.readthedocs.io/"

[project.scripts]
wisinput = "wisinput.main:main"
speaches = "speaches.main:create_app"
