[project]
name = "wisinput"
version = "0.1.0"
description = "智能语音输入工具 - 支持实时语音转录和翻译的AI助手"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "wisinput", email = "wisinput@example.com"},
]
keywords = ["speech", "transcription", "translation", "AI", "voice", "input"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Office/Business",
]
dependencies = [
    "colorlog>=6.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "httpx-sse>=0.4.1",
    "numpy>=2.3.2",
    "openai>=1.0.0",
    "opencc>=1.1.9",
    "pycaw>=20240210",
    "pynput>=1.8.1",
    "pyperclip>=1.9.0",
    "pystray>=0.19.5",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "uvicorn>=0.35.0",
    "fastapi>=0.100.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    # Whisper 相关依赖
    "faster-whisper>=1.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "huggingface-hub>=0.16.0",
    # 其他AI相关
    "ctranslate2>=3.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "assets",
    "README.md",
]

[tool.uv.workspace]
members = [
    "speaches",
    "packages/speaches-cli",
]

[tool.uv.sources]
speaches = { workspace = true }
speaches-cli = { workspace = true }

[project.urls]
homepage = "https://github.com/nurdich/wisinput"
repository = "https://github.com/nurdich/wisinput"
documentation = "https://wisinput.readthedocs.io/"
[project.scripts]
wisinput = "src.windows_app:main"

[project.gui-scripts]
wisinput-gui = "src.windows_app:main"